[gd_scene load_steps=12 format=2]

[ext_resource path="res://objects/Bird.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/Pipes.tscn" type="PackedScene" id=2]
[ext_resource path="res://screens/GameScreen.gd" type="Script" id=3]
[ext_resource path="res://screens/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://screens/PauseMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://images/background.png" type="Texture" id=6]
[ext_resource path="res://tilesets/ground.tres" type="TileSet" id=7]
[ext_resource path="res://sounds/music.ogg" type="AudioStream" id=8]
[ext_resource path="res://screens/GameOver.tscn" type="PackedScene" id=9]
[ext_resource path="res://screens/MainMenu.tscn" type="PackedScene" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 20 )

[node name="GameScreen" type="Node"]
script = ExtResource( 3 )
pipes_scene = ExtResource( 2 )
pipes_y_variation = 180.0

[node name="PipeSpawnTimer" type="Timer" parent="."]
wait_time = 1.2

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -6.0
bus = "Music"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Background" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.3, 1 )
motion_mirroring = Vector2( 1024, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Background"]
position = Vector2( 0, -150 )
texture = ExtResource( 6 )
centered = false

[node name="ParallaxGround" type="ParallaxBackground" parent="."]
layer = 1

[node name="Ground" type="ParallaxLayer" parent="ParallaxGround"]
motion_mirroring = Vector2( 700, 0 )

[node name="TileMap" type="TileMap" parent="ParallaxGround/Ground"]
position = Vector2( 0, 35 )
tile_set = ExtResource( 7 )
cell_size = Vector2( 70, 70 )
collision_layer = 2
collision_mask = 0
format = 1
tile_data = PoolIntArray( 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0 )

[node name="Bird" parent="." instance=ExtResource( 1 )]
position = Vector2( 150, 350 )

[node name="Pipes" type="Node" parent="."]

[node name="Ceiling" type="StaticBody2D" parent="."]
position = Vector2( 400, -20 )
scale = Vector2( 30, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ceiling"]
position = Vector2( 0, -30 )
shape = SubResource( 1 )

[node name="Floor" type="StaticBody2D" parent="." groups=["environment"]]
position = Vector2( 402, 685 )
scale = Vector2( 30, 1 )
collision_layer = 2
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
shape = SubResource( 1 )

[node name="UI" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="HUD" parent="UI" instance=ExtResource( 4 )]
visible = false

[node name="MainMenu" parent="UI" instance=ExtResource( 10 )]

[node name="GameOver" parent="UI" instance=ExtResource( 9 )]
visible = false

[node name="ExitMenu" parent="UI" instance=ExtResource( 5 )]
visible = false

[connection signal="timeout" from="PipeSpawnTimer" to="." method="_on_PipeSpawnTimer_timeout"]
